Adding img render preloader

--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -2,57 +2,57 @@
     <div class="container">
         <div class="row icon-Items animated fadeInLeft">
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Absence" ng-click="openWorklet('Absence','#Absence')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/008-briefcase.png" align=""/></div>
+                <a href="#Absence">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/008-briefcase.png" alt=""/></div>
                 </a>
                 Absence
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Performance" ng-click="openWorklet('Performance','#Performance')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/007-bars-chart.png" align=""/></div>
+                <a href="#Performance">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/007-bars-chart.png" alt=""/></div>
                 </a>
                 Performance
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Directory" ng-click="openWorklet('Directory','#Directory')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/006-directory.png" align=""/></div>
+                <a href="#Directory">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/006-directory.png" alt=""/></div>
                 </a>
                 Directory
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Favorites" ng-click="openWorklet('Favorites','#Favorites')">
-                    <div class="icon-Item center-align animated zoomIn" style="padding-top: 15px;">
-                        <img src="assets/resources/IMG/icons/fav.png" style="width: 90px; height: 90px;" align=""/></div>
+                <a href="#Favorites">
+                    <div class="icon-Item center-align animated zoomIn">
+                        <img src="assets/resources/IMG/icons/009-star.png"/></div>
                 </a>
-                Favorites
+                Item
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Personal_Info" ng-click="openWorklet('Personal Information','#Personal_Info')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/005-carnet.png" align=""/></div>
+                <a href="#Personal_Info">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/005-carnet.png" alt=""/></div>
                 </a>
                 Personal Information
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Pay" ng-click="openWorklet('Pay','#Pay')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/004-cash.png" align=""/></div>
+                <a href="#Pay">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/004-cash.png" alt=""/></div>
                 </a>
                 Pay
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Benefits" ng-click="openWorklet('Benefits','#Benefits')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/003-growth.png" align=""/></div>
+                <a href="#Benefits">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/003-growth.png" alt=""/></div>
                 </a>
                 Benefits
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Career" ng-click="openWorklet('Career','#Career')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/001-career.png" align=""/></div>
+                <a href="#Career">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/001-career.png" alt=""/></div>
                 </a>
                 Career
             </div>
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Reports" ng-click="openWorklet('My HR Reports','#Reports')">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/002-newspaper.png" align=""/></div>
+                <a href="#Reports">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/002-newspaper.png" alt=""/></div>
                 </a>
                 My HR Reports
             </div>
