--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -18,11 +18,12 @@
           <div class="row workletOperations">
             <div class="col l6 m6 s12 flexCenterContainer">
               <div class="input-field" style="top: 8px; width: 250px;">
-                <select [(ngModel)]="orderByValue">
-                  <option value="" disabled selected>Choose your option</option>
-                  <option [ngValue]="feild"  *ngFor="let feild of orderByFields">{{feild}}</option>
-                </select>
-                <label>Sort By: {{orderByValue}}</label>
+                  <select #selectedCategory name="jj">
+                    <option disabled selected>Choose your option</option>
+                    <option *ngFor="let item of orderByFields" [value]="item.field" >{{item.field}}</option>
+                  </select>
+                  <label><b class="black-text">Sort By:</b> {{orderByValue}}</label>
+                  <button (click)="getValueFromSelect(selectedCategory.value)" class="FlatBtn sortItemsBtn">Sort Items</button>
               </div>
 
             </div>
@@ -36,10 +37,12 @@
              </div>
               <div class="flexCenterContainer">
                 <div class="filterTableContainer right">
-                  <div class="input-field">
-                    <i class="material-icons prefix">local_bar</i>
-                    <input placeholder="Enter Filter" type="text" [(ngModel)]="workletItemsFilterText">
-                  </div>
+                  <form>
+                    <div class="input-field">
+                      <i class="material-icons prefix">local_bar</i>
+                      <input placeholder="Enter Filter" type="text" [(ngModel)]="workletItemsFilterText" name="workletItemsFilterText">
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
@@ -62,14 +65,18 @@
               <div id="All" class="col s12 tabContainer">
                 <!--/****************** Grid view ********************/-->
                 <div class="row" *ngIf="viewType == 'grid'">
-                  <div class="col l4 m6 s12" *ngFor="let item of favorites | filter : workletItemsFilterText | sortBy: orderBy; let i=index" >
+                  <div class="col l4 m6 s12" *ngFor="let item of favorites |
+                              filter : workletItemsFilterText |
+                              sortBy: orderByValue;
+                              let i=index"
+                  >
                     <div class="card hoverable center-align" onmouseover="showDominos(this.id,'grid')" onmouseleave="hideDominos(this.id,'grid')" id="{{i}}">
                       <div class="card-image flexCenterContainer">
                         <img src="{{item.icon}}" class="responsive-img" (load)="viewitemImg(i)" id="gridImg{{i}}">
                         <app-circular-pre-loader id="gridImgLoader{{i}}"></app-circular-pre-loader>
                       </div>
                       <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{item.name}}</span>
+                        <span class="card-title ">{{item.name}}</span>
                         <p>{{item.subDescription}}</p>
                         <p class="right-align" style="position: absolute; bottom: 5px; right: 15px;">
                             <a (click)="openItemDescription(item)" data-modal="test" data-action="open">Offer >></a>
@@ -94,7 +101,11 @@
                 <div class="row" *ngIf="viewType == 'list'">
                     <div class="" *ngFor="let item of favorites; let i=index" style="height: auto; position: relative;">
                       <div class="card horizontal workletListItem" onmouseover="showDominos(this.id,'list')" onmouseleave="hideDominos(this.id,'grid')" id="l{{i}}">
-                        <div class="card-image"><img src="{{item.icon}}" align="" class="responsive-img"></div>
+                        <div class="card-image flexCenterContainer" style="width: 200px; height: 150px;">
+                          <!--<img src="{{item.icon}}" align="" class="responsive-img">-->
+                          <img src="{{item.icon}}" class="responsive-img" (load)="viewitemImg(i)" id="listImg{{i}}">
+                          <app-circular-pre-loader id="listImgLoader{{i}}"></app-circular-pre-loader>
+                        </div>
                         <div class="card-stacked">
                           <div class="card-content">
                             <span class="card-title grey-text text-darken-4">{{item.name}}</span>
