--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,9 @@
     <ul class="right hide-on-med-and-down">
       <li >
         <a class="dropdown-button" href="#!" data-activates="userDropdown">
-          <div class="userListImage right"><img src="assets/resources/IMG/cardImage.jpg" alt="" class="responsive-img"/> </div>
+          <div class="userListImage right center-align">
+            <i class="large material-icons" style="font-size: 33px; margin-top: -8.5px; color: #0FB1E0;">account_circle</i>
+          </div>
           User Name
         </a>
       </li>
@@ -32,11 +34,40 @@
     </ul>
 
     <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header">
+              <i class="large material-icons" style="font-size: 33px; color: #0FB1E0;">account_circle</i> user name
+            </a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!">First</a></li>
+                <li><a href="#!">Second</a></li>
+                <li><a href="#!">Third</a></li>
+                <li><a href="#!">Fourth</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header">
+              <i class="large material-icons" style="font-size: 33px; color: #0FB1E0;">settings</i> Settings
+            </a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!">First</a></li>
+                <li><a href="#!">Second</a></li>
+                <li><a href="#!">Third</a></li>
+                <li><a href="#!">Fourth</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
     </ul>
-
   </div>
 </nav>
