--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -1,60 +1,11 @@
-<div  style="background: #fafafa; min-height: 84.8vh;border: 1px solid #EFF0F2;">
+<div class="dashBoardContainer">
     <div class="container">
         <div class="row icon-Items animated fadeInLeft">
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Absence">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/008-briefcase.png" alt=""/></div>
-                </a>
-                Absence
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Performance">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/007-bars-chart.png" alt=""/></div>
-                </a>
-                Performance
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Directory">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/006-directory.png" alt=""/></div>
-                </a>
-                Directory
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Favorites">
-                    <div class="icon-Item center-align animated zoomIn">
-                        <img src="assets/resources/IMG/icons/009-star.png"/></div>
+                <a href="Favorites">
+                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/009-star.png"/></div>
                 </a>
                 Item
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Personal_Info">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/005-carnet.png" alt=""/></div>
-                </a>
-                Personal Information
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Pay">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/004-cash.png" alt=""/></div>
-                </a>
-                Pay
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Benefits">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/003-growth.png" alt=""/></div>
-                </a>
-                Benefits
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Career">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/001-career.png" alt=""/></div>
-                </a>
-                Career
-            </div>
-            <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="#Reports">
-                    <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/002-newspaper.png" alt=""/></div>
-                </a>
-                My HR Reports
             </div>
         </div>
     </div>
